--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">CreativeMindsTask</string>
+    <string name="app_name">Pioneer Task</string>
+    <string name="search">search</string>
 </resources>
